Feat/yt sync (#6)
* feat: setup prisma supabase and betterauth

* feat: user zustand store

* feat: user initializer and username field in user model

* feat: user initializer in layout and toaster as well

* feat: custom server in order to attach socket io

* chore: standardize scripts for dev, build, start, and lint

* chore: move server.ts to src folder

* feat: setup profile page when user log in

* feat: middleware

* feat: betterauth api routes

* feat: api route to fetch the current user chats

* feat: api routes to fetch all chats and create a private chat

* feat: chat services that handle chats fetching and private chat creation

* feat: chat list component to display all the user chats in the sidebar

* feat: add chat sidebar in chat page

* feat: GET/ users to fetch all users according to a search query

* feat: get users service

* feat: user list with search functionality

* feat: use user services instead of fetching in client components

* refactor: use user services instead of fetching in client components

* feat(ui): enhance chat sidebar

* fix: prevent users to create same private chats

* fix: display the sender info instead of the current user in chat

* feat: zustand socket store

* feat: setup user room in socket

* feat: realtime update for both parties when someone creates a private chat

* feat: chat selection logic

* feat: mock messages

* feat(ui): chat window where users can communicate

* feat: POST /send-message route for users to create messages

* feat: send message service

* feat: implement send message logic in client

* feat: GET /chat/[chatId]/message-list to fetch the messages of that particular chat

* feat: getMessageList service to fetch message list in client

* feat: replace mock data with actual dynamic values

* refactor: update chat message and save to db later for better ux

* fix: avoid api calls in server and directly update db

* refactor(api): replace manual fetch calls with generated SDK

* refactor: use grouped
